# python-in-action

./: .pylintrc  README.md  Taskfile.yaml  pyproject.toml
Exercises/: flames_game.py  lib_phonenumbers.py  list_slicing.py
Monthly Python Tricks/: aug-22.py  july-22.py
Python Tricks/: PROGRESS.md
Python Tricks/2 Patterns for Cleaner Python/: 2.1-assertions.py  2.2-comma-placement.py  2.3-context-managers-and-the-with-statement.py
python_in_action/Articles/: PROGRESS.md
python_in_action/Exercises/: flames_game.py  lib_phonenumbers.py
python_in_action/MonthlyPythonTricks/: aug-22.py  july-22.py
python_in_action/Monthly_Python_Tricks/: aug-22.py  july-22.py
python_in_action/Python Tricks/2 Patterns for Cleaner Python/: 2.3-context-managers-and-the-with-statement.py
python_in_action/Python_Tricks/2_Patterns_for_Cleaner_Python/: 2.1-assertions.py  2.2-comma-placement.py  2.3-context-managers-and-the-with-statement.py
python_in_action/articles/: REFERENCE.md  type_of_imports.py
python_in_action/excercises/: flames_game.py  lib_phonenumbers.py  list_slicing.py  multiple_inheritance.py
python_in_action/monthly_python_tricks/: aug_22.py  july_22.py
python_in_action/python_pytest/: test_chapter_1.py
python_in_action/python_tricks/patterns_for_cleaner_python/: assertions.py  comma_placement.py  context_managers_and_with_statement.py
