[tool.poetry]
name = "python-in-action"
version = "0.0.0.post48.dev0+a225e7d"
description = "A python project for doing all sort of exercises"
authors = ["Ranga Reddy Nukala <itsmerr17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.7.1"
typer = "^0.7.0"
rich = "^13.2.0"
phonenumbers = "^8.12.52"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.3"
defusedxml = "^0.7.1"
flake8-formatter-junit-xml = "^0.0.6"
# https://github.com/smarie/python-genbadge/issues/31
pillow = "^9.5.0"
genbadge = "^1.1.0"
mypy = "^1.2.0"
# https://github.com/rasjani/pylint-junit/issues/1
pylint = "^2"
pylint-junit = "^0.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-memray = { version = "^1.4.0",  markers = "platform_system != 'Windows'" }
safety = "^1.10.3"
typed-ast = "^1.5.4"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
dirty = true

[tool.pylint.MASTER]
load-plugins="pylint_junit"

[tool.pylint.General]
ignore = "version.py"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = "fixme"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "R0903"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""
